fix: use card className for Imaginate description in order to align content

--- a/src/styles/widgets/Imaginate/styles.scss
+++ b/src/styles/widgets/Imaginate/styles.scss
@@ -16,6 +16,7 @@
   .slider.card,
   .custom-checkbox.card,
   .text.card,
+  .description.card,
   .inputUrl.card {
     border: 0;
 
